<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvActivityTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="{Title}"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_id" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_name" />

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_first_name" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_last_name" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_username" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_gender" />

</LinearLayout>